@@ -1,3 +1,7 @@
+Travel::Status::DE::VRR 1.01 - Mon Nov 26 2012
+
+    * Properly parse "tram canceled" information (EVAG, maybe also VRR)
+
 Travel::Status::DE::VRR 1.00 - Sat Dec 03 2011
 
     * switch to efa.vrr.de XML interface
